[package]
name = "version"
version = "1.16.2"
authors = ["Eirik Albrigtsen <sszynrae@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
doc = false
name = "version"
path = "version.rs"

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.9.0", features = ["typed-routing"] }
tower-http = { version = "0.4.4", default-features = false, features = ["trace"] }
futures = "0.3.29"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "signal"] }
elegant-departure = { version = "0.2.1", features = ["tokio"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }

[dependencies.kube]
version = "0.87.1"
features = ["runtime"]

# local testing: ignore
#git = "https://github.com/kube-rs/kube.git"
#rev = "9cdc8766863c1947b06e73eaf5604c4534975410"
#path = "../kube/kube"
