[package]
name = "version"
version = "1.16.3"
authors = ["Eirik Albrigtsen <sszynrae@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
doc = false
name = "version"
path = "version.rs"

[dependencies]
axum = "0.7.5"
tower-http = { version = "0.5.2", default-features = false, features = ["trace"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.82"
serde = { version = "1.0.198", features = ["derive"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }

[dependencies.kube]
version = "0.90.0"
features = ["runtime"]

# local testing: ignore
#git = "https://github.com/kube-rs/kube.git"
#rev = "9cdc8766863c1947b06e73eaf5604c4534975410"
#path = "../kube/kube"
